Fixed menu footer overlap issue

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -5,6 +5,7 @@
   background: var.$primary-color;
   color: var.$white;
   line-height: 2.8rem;
+  z-index: 1;
 
   .footer-message {
     font-size: 1.2rem;
